fixed mistakes, calendar still not responsive

--- a/public/content/css/stylesWebsite.css
+++ b/public/content/css/stylesWebsite.css
@@ -136,7 +136,7 @@ div.form-group{
     border-right: none;
 }
 
-button.btn {
+button.btn.btn-default {
     margin-left: 20px;
     width: 100px;
     border-radius: 0px;
